# foundry-genie-generative-ui

./: .gitignore  .lycheeignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.foundry/: agent-metadata.example.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/instructions/: copilot.instructions.md  frontend.instructions.md  python-agent.instructions.md  scripts-docs.instructions.md
.github/workflows/: ci.yml  links.yml
apps/agent/: .env.example  agent.yaml  hosted_main.py  main.py  pyproject.toml
apps/agent/skills/risk-analytics/: SKILL.md
apps/agent/src/: component_registry.py  config.py  dashboard_context.py  foundry_agent_client.py  normalization.py  session_context.py  ui_event_contract.py  visualization_mapper.py
apps/agent/tests/: test_approval_flow.py  test_config.py  test_dashboard_context.py  test_routing.py  test_session_context.py  test_supervisor_flow.py  test_ui_contracts.py  test_visualization_mapper.py
apps/controlled/: README.md
apps/controlled/agent/: Dockerfile  agent.yaml  main.py  pyproject.toml
apps/controlled/agent/skills/risk-analytics/: SKILL.md
apps/controlled/agent/src/: component_registry.py  config.py  dashboard_context.py  foundry_agent_client.py  normalization.py
apps/controlled/agent/tests/: test_config.py  test_dashboard_context.py  test_observability.py  test_routing.py  test_ui_contracts.py
apps/declarative/: README.md
apps/open-ended/: README.md
apps/open-ended/agent/: .env.example  agent.yaml  hosted_main.py  main.py  pyproject.toml
apps/open-ended/agent/src/: graph.py  sample_data.py
apps/open-ended/agent/tests/: test_generate_ui.py  test_observability.py
apps/web/: .env.example  package.json
databricks/sql/: risk_demo_setup.sql  uc3_demo_setup.sql
docs/: README.md  architecture.md  azure-setup.md  cost-control.md  demo-script.md  deploying-the-spectrum.md  generative-ui-architecture.drawio  generative-ui-spectrum.md  genie-space-config.md  local-development.md  scaling-to-production.md  session-guide.es.md
infra/: main.bicep  main.demo.bicepparam
infra/modules/: container-registry.bicep  databricks.bicep  foundry.bicep  frontend-app.bicep  frontend-plan.bicep  identity.bicep  keyvault.bicep  monitoring.bicep  role-assignments.bicep  storage.bicep
scripts/: 10-create-warehouse.sh  20-run-demo-sql.sh  30-create-genie-space.sh  50-grant-databricks-permissions.sh  60-setup-foundry-genie-agent.sh  README.md  build-hosted-agent-image.sh  create-genie-space.sh  create-warehouse.sh  databricks-warehouse.sh  delete-resources.sh  deploy-infra.sh  foundry-genie-agent-instructions.txt  gen-risk-demo-sql.py  grant-databricks-permissions.sh  preflight.sh  risk.env.example  run-demo-sql.sh  setup-foundry-genie-agent.sh  stop-compute.sh  uc3.env.example  validate-agent.sh  validate-risk.sh
scripts/lib/: common.sh
(+116 files in other folders)
