[project]
name = "open-ended-ui-agent"
version = "0.1.0"
description = "Open-ended Generative UI demo: sandboxed generated UI and MCP Apps over AG-UI"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.5,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "azure-identity>=1.17.0",
    "azure-ai-agentserver-core==2.0.0b3",
    "azure-ai-agentserver-invocations==1.0.0b3",
    "langchain-azure-ai[opentelemetry]>=1.2.3,<2.0.0",
    "langgraph>=1.0.0",
    "langchain-core>=1.0.0",
    "copilotkit>=0.1.89,<0.2.0",
    "ag-ui-langgraph>=0.0.41,<0.0.42",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0,<3.0.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "ruff>=0.14.0,<1.0.0",
]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = false
